evaluation/rq1/sota/mythril/execution_logs/0x0xa0################################53eab_bsc.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xa0################################53eab_bsc/PancakeERC20.sol:88:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity =0.5.16;
^----------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.16"

